// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/File Multi Upload 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":rv:"
    >
      Input Label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":rv:-description"
    />
    <div
      className="bg-white border-dashed-2 relative cursor-pointer rounded-xl p-10"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="presentation"
      tabIndex={0}
    >
      <input
        accept="image/png, image/jpeg"
        hidden={true}
        id=":rv:"
        multiple={true}
        onChange={[Function]}
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
        type="file"
      />
      <div
        className="m-auto flex w-fit items-center justify-center gap-3"
      >
        <div
          className="bg-primary-100 flex h-15 w-15 items-center justify-center rounded-lg bg-cover bg-no-repeat"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 24,
              }
            }
          />
        </div>
        <div
          className="flex-1"
        >
          <p
            className="mb-1 line-clamp-1 text-bold-subtitle-400"
            data-testid="txt"
            title="Upload File (File formats: PNG, JPEG)"
          >
            Upload File (File formats: PNG, JPEG)
          </p>
          <p
            className="line-clamp-1 text-light-body-300 with-inner-html"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>",
              }
            }
            data-testid="txt"
            title="Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="mt-8 flex flex-col items-center justify-center gap-8"
  />,
]
`;

exports[`Storyshots Components/Elements/Inputs/File Single Upload 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":rt:"
    >
      Input Label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":rt:-description"
    />
    <div
      className="bg-white border-dashed-2 relative cursor-pointer rounded-xl p-10"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="presentation"
      tabIndex={0}
    >
      <input
        accept="image/png, image/jpeg"
        hidden={true}
        id=":rt:"
        onChange={[Function]}
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
        type="file"
      />
      <div
        className="m-auto flex w-fit items-center justify-center gap-3"
      >
        <div
          className="bg-primary-100 flex h-15 w-15 items-center justify-center rounded-lg bg-cover bg-no-repeat"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 24,
              }
            }
          />
        </div>
        <div
          className="flex-1"
        >
          <p
            className="mb-1 line-clamp-1 text-bold-subtitle-400"
            data-testid="txt"
            title="Upload File (File formats: PNG, JPEG)"
          >
            Upload File (File formats: PNG, JPEG)
          </p>
          <p
            className="line-clamp-1 text-light-body-300 with-inner-html"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>",
              }
            }
            data-testid="txt"
            title="Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="mt-8 flex flex-col items-center justify-center gap-8"
  />,
]
`;

exports[`Storyshots Components/Elements/Inputs/File Variant For Modal 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":ru:"
    >
      Input Label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":ru:-description"
    />
    <div
      className="bg-white flex flex-col items-center justify-center rounded-lg border border-grey-750 py-8"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="presentation"
      tabIndex={0}
    >
      <input
        accept="image/png, image/jpeg"
        hidden={true}
        id=":ru:"
        onChange={[Function]}
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
        type="file"
      />
      <div
        style={
          Object {
            "height": undefined,
            "width": 24,
          }
        }
      />
      <div
        className="flex flex-col"
      >
        <p
          className="text-center text-primary text-12-bold"
          data-testid="txt"
        >
          Click to upload
        </p>
        <p
          className="text-center text-12-light"
          data-testid="txt"
        >
          or
        </p>
        <p
          className="max-w-[210px] text-center text-12-light"
          data-testid="txt"
        >
          drag and drop
        </p>
      </div>
    </div>
  </div>,
  <div
    className="flex items-center justify-between"
  >
    <p
      className="mt-9 pr-5 text-primary text-12-bold"
      data-testid="txt"
    />
  </div>,
  <div
    className="flex flex-col gap-4 w-full mt-2 mb-4"
  />,
]
`;
